--- a/main.html
+++ b/main.html
@@ -7,7 +7,23 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<h1>Feedback Form</h1>
+	<div>
+		<label for="name">Name</label>
+		<input type="text" id="name" min="3" max="50" >
+	</div>
+	<div>
+		<label for="portfolio">Portfolio</label>
+		<input type="text" placeholder="Provide the link">
+	</div>
+	<div>
+		<label for="favColor"> Favourite Color</label>
+		<input type="color" id="favColor">		
+	</div>
+	<div>
+		<label for="likeness"> Likeness</label>
+		<input type="range" id="likeness" min="1" max="100">
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
