--- a/main.html
+++ b/main.html
@@ -18,9 +18,7 @@
 	</div>
 	<div>
 		<label for="favColor"> Favourite Color</label>
-		<input type="color" id="favColor">		
-	</div>
-	<div>
+		<input type="color" id="favColor"><br>
 		<label for="likeness"> Likeness</label>
 		<input type="range" id="likeness" min="1" max="100">
 	</div>
