--- a/main.html
+++ b/main.html
@@ -14,13 +14,13 @@
 	</div>
 	<div>
 		<label for="portfolio">Portfolio</label>
-		<input type="text" placeholder="Provide the link">
+		<input type="text" placeholder="Provide the link" id="portfolio">
 	</div>
 	<div>
 		<label for="favColor"> Favourite Color</label>
 		<input type="color" id="favColor"><br>
 		<label for="likeness"> Likeness</label>
-		<input type="range" id="likeness" min="1" max="100">
+		<input type="range" id="likeness" min="1" max="100" >
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
