--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<h1>Feedback Form</h1>
-	<div>
+	<form>
+		<div>
 		<label for="name">Name</label>
 		<input type="text" id="name" min="3" max="50" >
 	</div>
@@ -22,6 +23,8 @@
 		<label for="likeness"> Likeness</label>
 		<input type="range" id="likeness" min="1" max="100" >
 	</div>
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
