--- a/main.html
+++ b/main.html
@@ -9,22 +9,19 @@
 <body>
 	<h1>Feedback Form</h1>
 	<form>
-		<div>
-		<label for="name">Name</label>
-		<input type="text" id="name" min="3" max="50" >
-	</div>
-	<div>
-		<label for="portfolio">Portfolio</label>
-		<input type="text" placeholder="Provide the link" id="portfolio">
-	</div>
-	<div>
-		<label for="favColor"> Favourite Color</label>
-		<input type="color" id="favColor"><br>
-		<label for="likeness"> Likeness</label>
-		<input type="range" id="likeness" min="1" max="100" >
-	</div>
-	</form>
-	
+			<label for="name">Name</label>
+			<input type="text" id="name" min="3" max="50" >
+		<br>
+
+			<label for="portfolio">Portfolio</label>
+			<input type="text" placeholder="Provide the link" id="portfolio">
+		<br>
+			<label for="favColor"> Favourite Color</label>
+			<input type="color" id="favColor">
+		<br>
+			<label for="likeness"> Likeness</label>
+			<input type="range" id="likeness" min="1" max="100" >
+	</form>	
     <script type="text/javascript" src="./script.js">
 </script>
 
