--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 <body>
 	<h1>Feedback Form</h1>
 	<form>
-			<label for="name">Name</label>
-			<input type="text" id="name" min="3" max="50" >
+			<label for="name">Name: </label>
+			<input type="text"  placeholde= "Enter Your Name"id="name" minlength="3" maxlength="50" >
 		<br>
 
-			<label for="portfolio">Portfolio</label>
-			<input type="text" placeholder="Provide the link" id="portfolio">
+			<label for="portfolio">Portfolio: </label>
+			<input type="url" placeholder="Provide the link" id="portfolio">
 		<br>
-			<label for="favColor"> Favourite Color</label>
+			<label for="favColor"> Favourite Color: </label>
 			<input type="color" id="favColor">
 		<br>
 			<label for="likeness"> Likeness</label>
