--- a/main.html
+++ b/main.html
@@ -8,20 +8,20 @@
 
 <body>
 	<h1>Feedback Form</h1>
-	<form>
-			<label for="name">Name: </label>
-			<input type="text"  placeholde= "Enter Your Name"id="name" minlength="3" maxlength="50" >
-		<br>
-
-			<label for="portfolio">Portfolio: </label>
-			<input type="url" placeholder="Provide the link" id="portfolio">
-		<br>
-			<label for="favColor"> Favourite Color: </label>
-			<input type="color" id="favColor">
-		<br>
-			<label for="likeness"> Likeness</label>
-			<input type="range" id="likeness" min="1" max="100" >
-	</form>	
+		<form>
+				<label for="name">Name: </label>
+				<input type="text"  placeholde= "Enter Your Name"id="name" minlength="3" maxlength="50" required>
+			<br>
+	
+				<label for="portfolio">Portfolio: </label>
+				<input type="url" placeholder="Provide the link" id="portfolio" required>
+			<br>
+				<label for="favColor"> Favourite Color: </label>
+				<input type="color" id="favColor" required>
+			<br>
+				<label for="likeness"> Likeness</label>
+				<input type="range" id="likeness" min="1" max="100" required >
+		</form>	
     <script type="text/javascript" src="./script.js">
 </script>
 
