--- a/main.html
+++ b/main.html
@@ -10,17 +10,22 @@
 	<h1>Feedback Form</h1>
 		<form>
 				<label for="name">Name: </label>
-				<input type="text"  placeholde= "Enter Your Name"id="name" minlength="3" maxlength="50" required>
+				<input type="text"  placeholder= "Enter Your Name" id="name" minlength="3" maxlength="50" required>
 			<br>
 	
 				<label for="portfolio">Portfolio: </label>
 				<input type="url" placeholder="Provide the link" id="portfolio" required>
 			<br>
 				<label for="favColor"> Favourite Color: </label>
-				<input type="color" id="favColor" required>
+				<select id="favColor" name="favColor">
+    <option value="red">Red</option>
+    <option value="blue">Blue</option>
+    <option value="green">Green</option>
+    <!-- Add more color options as needed -->
+  </select>
 			<br>
 				<label for="likeness"> Likeness</label>
-				<input type="range" id="likeness" min="1" max="100" required >
+				<input type="range" id="likeness" min="1" max="100">
 		</form>	
     <script type="text/javascript" src="./script.js">
 </script>
