--- a/main.html
+++ b/main.html
@@ -17,12 +17,7 @@
 				<input type="url" placeholder="Provide the link" id="portfolio" required>
 			<br>
 				<label for="favColor"> Favourite Color: </label>
-				<select id="favColor" name="favColor">
-    <option value="red">Red</option>
-    <option value="blue">Blue</option>
-    <option value="green">Green</option>
-    <!-- Add more color options as needed -->
-  </select>
+				<input type="color" id="favColor">
 			<br>
 				<label for="likeness"> Likeness</label>
 				<input type="range" id="likeness" min="1" max="100">
