--- a/main.html
+++ b/main.html
@@ -8,7 +8,7 @@
 
 <body>
 	<h1>Feedback Form</h1>
-		<form method="" >
+		<form method="post" >
 				<label for="name">Name: </label>
 				<input type="text"  placeholder= "Enter Your Name" id="name" minlength="3" maxlength="50" required>
 			<br>
